[gd_scene load_steps=21 format=2]

[ext_resource path="res://Fonts/Brown Sugar .ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/DISEÑO BÁSICO BLANCO.png" type="Texture" id=2]
[ext_resource path="res://Scenes/LogginPanel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/buttonPRESSED.tres" type="StyleBox" id=4]
[ext_resource path="res://Scenes/MenuElements.gd" type="Script" id=5]
[ext_resource path="res://Scenes/RegisterPanel.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Montserrat-Light.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/Label.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scenes/Button.tres" type="StyleBox" id=9]
[ext_resource path="res://Scenes/ButtonLetter.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scenes/buttonHOVER.tres" type="StyleBox" id=11]
[ext_resource path="res://Scenes/TEXTBOX.tres" type="DynamicFont" id=12]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.387228, 0.862097, 0.893066, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.313726, 0.694118, 0.717647, 1 )
border_blend = true
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
corner_detail = 10

[sub_resource type="DynamicFont" id=15]
size = 28
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 828.0
margin_bottom = 1838.0
rect_pivot_offset = Vector2( 278, 548 )

[node name="UI" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="UI"]
position = Vector2( 352.5, 270.688 )
scale = Vector2( 0.09025, 0.0848438 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 195.0
margin_top = 394.0
margin_right = 518.0
margin_bottom = 473.0
custom_colors/font_color = Color( 0, 0.729412, 0.776471, 1 )
custom_fonts/font = SubResource( 1 )
text = "DECISIONS"
align = 1
valign = 1

[node name="MenuElements" type="Node2D" parent="UI"]
position = Vector2( 0, 700 )
script = ExtResource( 5 )

[node name="LogginPanel" type="Node2D" parent="UI/MenuElements"]
position = Vector2( 0, -700 )
script = ExtResource( 3 )

[node name="move_tween" type="Tween" parent="UI/MenuElements/LogginPanel"]

[node name="User" type="Label" parent="UI/MenuElements/LogginPanel"]
margin_left = 112.0
margin_top = 597.0
margin_right = 512.0
margin_bottom = 667.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 6 )
text = "Username:"
valign = 1

[node name="UserName" type="LineEdit" parent="UI/MenuElements/LogginPanel"]
margin_left = 112.0
margin_top = 673.0
margin_right = 612.0
margin_bottom = 743.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
clear_button_enabled = true

[node name="Password" type="Label" parent="UI/MenuElements/LogginPanel"]
margin_left = 109.0
margin_top = 781.0
margin_right = 509.0
margin_bottom = 851.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Password:"
valign = 1

[node name="UserPwd" type="LineEdit" parent="UI/MenuElements/LogginPanel"]
margin_left = 111.0
margin_top = 856.0
margin_right = 611.0
margin_bottom = 926.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
secret = true
clear_button_enabled = true

[node name="EnterBt" type="Button" parent="UI/MenuElements/LogginPanel"]
margin_left = 110.0
margin_top = 1084.0
margin_right = 340.0
margin_bottom = 1184.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "ENTER"
icon_align = 1

[node name="Register" type="Button" parent="UI/MenuElements/LogginPanel"]
margin_left = 359.0
margin_top = 1085.0
margin_right = 609.0
margin_bottom = 1185.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
enabled_focus_mode = 0
text = "REGISTER"
icon_align = 1

[node name="CheckBox" type="CheckBox" parent="UI/MenuElements/LogginPanel"]
anchor_right = 0.752
margin_left = 112.0
margin_top = 951.0
margin_right = 136.0
margin_bottom = 975.0
rect_scale = Vector2( 2, 2 )
flat = true
align = 1
icon_align = 1

[node name="RegisterPanel" type="Node2D" parent="UI/MenuElements"]
script = ExtResource( 6 )

[node name="ConfirmBt" type="Button" parent="UI/MenuElements/RegisterPanel"]
margin_left = 730.0
margin_top = 385.0
margin_right = 960.0
margin_bottom = 485.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "CONFIRM"
icon_align = 1

[node name="Loggin" type="Button" parent="UI/MenuElements/RegisterPanel"]
margin_left = 979.0
margin_top = 385.0
margin_right = 1229.0
margin_bottom = 485.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
enabled_focus_mode = 0
text = "LOGIN"

[node name="move_tween" type="Tween" parent="UI/MenuElements/RegisterPanel"]

[node name="Mail" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 730.0
margin_top = -191.0
margin_right = 1130.0
margin_bottom = -141.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Mail:"
valign = 1

[node name="UserMail" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 731.0
margin_top = -133.0
margin_right = 1231.0
margin_bottom = -63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true

[node name="User" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 728.0
margin_top = -56.0
margin_right = 1128.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "User:"
valign = 1

[node name="UserText" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 727.0
margin_top = -1.0
margin_right = 1227.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true

[node name="Password" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 728.0
margin_top = 78.0
margin_right = 1128.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Password:"
valign = 1

[node name="UserPassword" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 729.0
margin_top = 141.0
margin_right = 1229.0
margin_bottom = 211.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
secret = true
clear_button_enabled = true

[node name="ConfirmPassword" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 726.0
margin_top = 219.0
margin_right = 1126.0
margin_bottom = 269.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Confirm Password:"
valign = 1

[node name="ConfirmPass" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 730.0
margin_top = 282.0
margin_right = 1230.0
margin_bottom = 352.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
secret = true
clear_button_enabled = true

[node name="HTTPRequest" type="HTTPRequest" parent="UI/MenuElements/RegisterPanel"]

[node name="Notification" type="Label" parent="UI/MenuElements"]
margin_left = 111.0
margin_top = 596.0
margin_right = 599.0
margin_bottom = 668.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
valign = 1

[node name="EXIT" type="Button" parent="UI/MenuElements"]
margin_left = 110.0
margin_top = 500.0
margin_right = 610.0
margin_bottom = 580.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 9 )
enabled_focus_mode = 0
text = "EXIT"

[node name="Buttons" type="Node2D" parent="."]

[node name="Emitters" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 359, 800 )

[connection signal="button_up" from="UI/MenuElements/LogginPanel/EnterBt" to="UI/MenuElements" method="_on_EnterBt_button_up"]
[connection signal="pressed" from="UI/MenuElements/LogginPanel/Register" to="UI/MenuElements" method="_on_Register_pressed"]
[connection signal="pressed" from="UI/MenuElements/RegisterPanel/ConfirmBt" to="UI/MenuElements" method="_on_ConfirmBt_pressed"]
[connection signal="pressed" from="UI/MenuElements/RegisterPanel/Loggin" to="UI/MenuElements" method="_on_Loggin_pressed"]
[connection signal="request_completed" from="UI/MenuElements/RegisterPanel/HTTPRequest" to="UI/MenuElements" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="UI/MenuElements/EXIT" to="UI/MenuElements" method="_on_EXIT_pressed"]
